samples/errors/Imported.tmpl
scala: test.Imported
purs: Test.Imported

type X: Int
